# markdown-span-attr

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
markdown_span_attr/: __init__.py  span_attr.py
tests/: test_span_attr.py
